@@ -1,4 +1,5 @@
 export(Rd2rst)
+export(Rd2myst)
 importFrom(stringi,stri_dup)
 importFrom(stringi,stri_flatten)
 importFrom(stringi,stri_match_first_regex)
