@@ -1,6 +1,6 @@
 # ############################################################################ #
 #                                                                              #
-#   Convert R Documentation to Markedly- (MyST) or reStructuredText (RST)      #
+#   Convert R Documentation to Markedly- (MyST) or reStructuredText (rST)      #
 #                                                                              #
 #   Copyleft (C) 2020-2021, Marek Gagolewski <https://www.gagolewski.com>      #
 #                                                                              #
@@ -18,15 +18,12 @@
 # ############################################################################ #
 
 
-
-# System requirements: R, pandoc
-
-# Note: the HTML files are generated by a computer program.
+# Note: R Documentation HTML files are generated by a computer program.
 # Hence, it is okay to process them with regexes.
 
 
 
-html_process_manpage <- function(fhtml, bname)
+html_process_manpage <- function(fhtml, bname, remove_code_link)
 {
     stopifnot(stri_detect_regex(fhtml[6], "^<table.*</table>$"))
 
@@ -49,7 +46,8 @@ html_process_manpage <- function(fhtml, bname)
     fhtml <- stri_replace_all_regex(
         fhtml,
         "<code><a href=\"([^./]+?\\.html)\">(.*?)</a>(.*?)</code>",
-        "<a href=\"$1\">$2$3</a>"
+        if (remove_code_link) "<a href=\"$1\">$2$3</a>"
+        else "<a href=\"$1\"><code>$2$3</code></a>"
     )
 
 
@@ -67,7 +65,8 @@ html_process_manpage <- function(fhtml, bname)
             "<code><a href=\"\\.\\./\\.\\./(%s)/html/([^./]+?\\.html)\">(.*?)</a>(.*?)</code>",
             stri_flatten(recommended_pkgs, collapse="|")
         ),
-        "<a href=\"https://stat.ethz.ch/R-manual/R-patched/library/$1/html/$2\">$3$4</a>"
+        if (remove_code_link) "<a href=\"https://stat.ethz.ch/R-manual/R-patched/library/$1/html/$2\">$3$4</a>"
+        else "<a href=\"https://stat.ethz.ch/R-manual/R-patched/library/$1/html/$2\"><code>$3$4</code></a>"
     )
 
     # ../../stringi/html/xxx.html ->
@@ -80,8 +79,19 @@ html_process_manpage <- function(fhtml, bname)
             "<code><a href=\"\\.\\./\\.\\./(%s)/html/([^./]+?\\.html)\">(.*?)</a>(.*?)</code>",
             stri_flatten(marek_pkgs, collapse="|")
         ),
-        "<a href=\"https://$1.gagolewski.com/rapi/$2\">$3$4</a>"
+        if (remove_code_link) "<a href=\"https://$1.gagolewski.com/rapi/$2\">$3$4</a>"
+        else "<a href=\"https://$1.gagolewski.com/rapi/$2\"><code>$3$4</code></a>"
     )
+
+    fhtml <- stri_replace_all_regex(
+        fhtml,
+        "<pre>",
+        "<pre class=\"r\">"
+    )
+
+    fhtml <- stri_replace_all_regex(fhtml, "^<h2>(.*)</h2>$", "<h1>$1</h1>")
+    fhtml <- stri_replace_all_regex(fhtml, "^<h3>(.*)</h3>$", "<h2>$1</h2>")
+    fhtml <- stri_replace_all_regex(fhtml, "^<h4>(.*)</h4>$", "<h3>$1</h3>")
 
     list(
         title=title,
@@ -126,17 +136,55 @@ rst_generate_index <- function(package, output_dir, index)
 
 
 
+myst_convert_manpage <- function(iname, oname)
+{
+    orst <- system2("pandoc", stdout=TRUE,
+        args=c(
+            "--from html+tex_math_dollars",
+            "--to markdown+backtick_code_blocks+tex_math_dollars-simple_tables-multiline_tables",
+            "--wrap=none",
+#             "--indented-code-classes=r",
+            #"--reference-links",
+            iname
+        ))
+    # preformatted code blocks as R code
+    orst <- stri_replace_first_regex(orst, "^``` \\{\\.r\\}$", "```r")
+
+    writeLines(orst, oname)
+}
+
+
+myst_generate_index <- function(package, output_dir, index)
+{
+    rapi_index_title <- sprintf("R Package *%s* Reference", package)
+    rapi_index <- c(
+        rapi_index_title,
+        stri_dup("=", stri_length(rapi_index_title)),
+        "",
+        "```{toctree}",
+        ":maxdepth: 1",
+        #"    :caption: API Documentation:",
+        "",
+        sprintf("%s/%s", output_dir, index[, 1]),
+        "```"
+    )
+    rapi_index
+}
+
+
 
 package_process <- function(
     package, output_dir, index_file,
-    output_ext, convert_manpage, generate_index
+    output_ext, convert_manpage, generate_index,
+    remove_code_link
 )
 {
     library(package, character.only=TRUE)
     input_path <- file.path(path.package(package), "html")
 
     if (!file.exists(file.path(input_path, "00Index.html"))) {
-        stop("HTML documentation not installed. Use `R CMD INSTALL <package_path> --html`.")
+        stop(paste0("HTML documentation not installed. ",
+            "Use `R CMD INSTALL <package_path> --html`."))
     }
 
 
@@ -157,7 +205,11 @@ package_process <- function(
         cat(sprintf("Converting %s...", fname))
         bname <- stri_match_first_regex(fname, "(.*)\\.html")[, 2]
 
-        page <- html_process_manpage(readLines(file.path(input_path, fname)), bname)
+        page <- html_process_manpage(
+            readLines(file.path(input_path, fname)),
+            bname,
+            remove_code_link
+        )
         writeLines(page$fhtml, tmpname)
 
         convert_manpage(
@@ -185,13 +237,27 @@ package_process <- function(
 
 
 #' @param package name of the package
-#' @param output_dir target director - will be wiped out
+#' @param output_dir target directory - will be wiped out
 #' @param index_file filename with the function index toctree
 Rd2rst <- function(package, output_dir="rapi", index_file="rapi.rst")
 {
     package_process(
         package, output_dir, index_file,
-        "rst", rst_convert_manpage, rst_generate_index
+        "rst", rst_convert_manpage, rst_generate_index,
+        remove_code_link=TRUE
+    )
+}
+
+
+#' @param package name of the package
+#' @param output_dir target directory - will be wiped out
+#' @param index_file filename with the function index toctree
+Rd2myst <- function(package, output_dir="rapi", index_file="rapi.md")
+{
+    package_process(
+        package, output_dir, index_file,
+        "md", myst_convert_manpage, myst_generate_index,
+        remove_code_link=FALSE
     )
 }
 
